--- a/Web/CookIt.Web/Views/Home/Privacy.cshtml
+++ b/Web/CookIt.Web/Views/Home/Privacy.cshtml
@@ -55,7 +55,20 @@
                 </div>
             </div>
         </div>
-
-        
+        <div class="wrapper row">
+            <div class="preview col-md-6">
+                <div class="quote-box centered" style="width:95%">
+                    <div class="quote">
+                        <blockquote>
+                            "The secret of getting ahead is getting started. The secret of getting started is breaking your complex overwhelming tasks into small manageable tasks, and starting on the first one."eable tasks, and starting on the first one." on the first one."rst one."
+                        </blockquote>
+                    </div>
+                    <div class="name-quote">
+                        <span style="float:left">Created On: 19.19.19 22:20</span>
+                        <span >- Marko Markov</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
