--- a/Web/CookIt.Web/Views/Recipes/Details.cshtml
+++ b/Web/CookIt.Web/Views/Recipes/Details.cshtml
@@ -8,26 +8,110 @@
     <div class="container-fliud">
         <div class="wrapper row">
             <div class="preview col-md-6">
-
                 <div class="preview-pic tab-content">
-                    <div class="tab-pane active" id="pic-1"><img src="@Model.Image" /></div>
+                    <div class="tab-pane active mb-4" id="pic-1"><img src="@Model.Image" /></div>
+                    @if (!Model.HasReviewed)
+                    {
+                        <div class="wrapper row">
+                            <div class="preview col-md-12">
+                                <form asp-action="AddReview" method="post" class="text-center rounded centered" style="width:95%">
+                                    <div asp-validation-summary="All" class="text-danger pb-1"></div>
+                                    <div class="stars d-flex justify-content-start ml-2">
+                                        <div class="star-rating">
+                                            <span class="fa fa-star fa-2x reviewStar" data-rating="1"></span>
+                                            <span class="fa fa-star fa-2x reviewStar" data-rating="2"></span>
+                                            <span class="fa fa-star fa-2x reviewStar" data-rating="3"></span>
+                                            <span class="fa fa-star fa-2x reviewStar" data-rating="4"></span>
+                                            <span class="fa fa-star fa-2x reviewStar" data-rating="5"></span>
+                                            <input id="starsValue" asp-for="ReviewBindingModel.Stars" class="rating-value" hidden />
+                                            <span asp-validation-for="ReviewBindingModel.Stars"></span>
+                                        </div>
+                                    </div>
+
+                                    <textarea asp-for="ReviewBindingModel.Content" class="form-control ml-1 w-100 mt-2" placeholder="Content"></textarea>
+                                    <span asp-validation-for="ReviewBindingModel.Content"></span>
+
+                                    <input name="id" value="@Model.Id" hidden />
+
+                                    <div class="d-flex justify-content-end">
+                                        <button type="submit" class="btn btn-dark mr-4 mt-4 mb-3">Add Review</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    }
+                    @if (Model.Reviews.Any())
+                    {
+                        <div class="wrapper row">
+                            <div class="preview col-md-12 mb-3">
+                                <h3 class="d-flex justify-content-center">Reviews</h3>
+                            </div>
+                        </div>
+                        @foreach (var review in Model.Reviews)
+                        {
+                            <div class="wrapper row">
+                                <div class="preview col-md-12 mb-3">
+                                    <div class="quote-box centered" style="width:95%">
+                                        <div class="quote">
+                                            <blockquote>
+                                                @review.Content
+                                                <span class="stars d-inline-block" style="float:right">
+                                                    @for (int i = 1; i <= 5; i++)
+                                                    {
+                                                        if (review.Stars >= i)
+                                                        {
+                                                            <span class="fa fa-star checked"></span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span class="fa fa-star"></span>
+                                                        }
+                                                    }
+                                                </span>
+
+                                            </blockquote>
+                                        </div>
+                                        <div class="name-quote">
+                                            <span style="float:left">Created On: @review.CreatedOn</span>
+                                            <span>- @review.Author</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                    }
                 </div>
             </div>
-            <div class="details col-md-6">
+            <div class="details col-md-6 mt-2">
                 <h3 class="product-title">@Model.Name</h3>
                 <div class="rating">
-                    <div class="stars">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
+                    <div class="stars mb-1">
+                        <span class="h5">@Model.TotalReviewScore.ToString("F2") </span>
+                        @for (int i = 1; i <= 5; i++)
+                        {
+                            if (i == (int)Model.TotalReviewScore + 1 && Model.TotalReviewScore < i)
+                            {
+                                <span class="fa fa-star-half-empty checked"></span>
+                                continue;
+                            }
+
+                            if (Model.TotalReviewScore >= i)
+                            {
+                                <span class="fa fa-star checked"></span>
+                            }
+                            else
+                            {
+                                <span class="fa fa-star"></span>
+                            }
+                        }
                     </div>
-                    <span class="review-no">41 reviews</span>
+                    <span class="review-no h6">@Model.Reviews.Count review/s</span>
+
                 </div>
+                <span class="review-no h6">Portions: @Model.Portions</span>
                 <p class="product-description">@Model.Description</p>
-                <h4 class="price">price: <span>@Model.Price <i class="fa fa-euro"></i></span></h4>
-                <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
+                <h4 class="price mb-4">price: <span>@Model.Price <i class="fa fa-euro"></i></span></h4>
+
                 <div class="row mb-3">
                     <div class="col-md-6">
                         <ul class="list-group d-flex flex-row flex-wrap w-100">
@@ -54,37 +138,7 @@
                 </div>
             </div>
         </div>
-        @if (!Model.HasReviewed)
-        {
-        <div class="wrapper row">
-            <div class="preview col-md-6">
-                <h3 class="d-flex justify-content-center">Reviews</h3>
-                <form asp-action="AddReview" method="post" class="text-center w-100 rounded">
-                    <div asp-validation-summary="All" class="text-danger pb-1"></div>
-                    <div class="stars d-flex justify-content-start ml-2">
-                        <div class="star-rating">
-                            <span class="fa fa-star fa-2x reviewStar" data-rating="1"></span>
-                            <span class="fa fa-star fa-2x reviewStar" data-rating="2"></span>
-                            <span class="fa fa-star fa-2x reviewStar" data-rating="3"></span>
-                            <span class="fa fa-star fa-2x reviewStar" data-rating="4"></span>
-                            <span class="fa fa-star fa-2x reviewStar" data-rating="5"></span>
-                            <input id="starsValue" asp-for="ReviewBindingModel.Stars" class="rating-value" hidden/>
-                            <span asp-validation-for="ReviewBindingModel.Stars"></span>
-                        </div>
-                    </div>
-
-                    <textarea asp-for="ReviewBindingModel.Content" class="form-control ml-1 w-100 mt-2" placeholder="Content"></textarea>
-                    <span asp-validation-for="ReviewBindingModel.Content"></span>
-                    
-                    <input  name="id" value="@Model.Id" hidden/>
-
-                    <div class="d-flex justify-content-end">
-                        <button type="submit" class="btn btn-dark mr-4 mt-4 mb-3">Add Review</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        }
+       
     </div>
 </div>
 
