--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@
                         </ul>
                         <ul class="top_right d-flex justify-content-center">
                             <li class="user"><a href="/Identity/Account/Manage"><i class="icon-user icons"><i class="profileIcon">Profile</i></i></a></li>
-                            <li class="cart ml-4"><a href="#"><i class="icon_cart_alt icons pr-1"></i></a></li>
+                            <li class="cart ml-4"><a href="#" amount="0"><i class="icon_cart_alt icons pr-1"></i></a></li>
                         </ul>
                     </div>
                 </div>
