Implemented Cart.Minor fixes with the RecipeController.

--- a/Web/CookIt.Web/Views/Home/Privacy.cshtml
+++ b/Web/CookIt.Web/Views/Home/Privacy.cshtml
@@ -8,67 +8,129 @@
 <div class="card" style="background: #eee">
     <div class="container-fliud">
         <div class="wrapper row">
-            <div class="preview col-md-6">
+            <div class="preview col-md-12 mb-3">
+                <div class="h3 mt-3 centered">
+                    Your Shopping cart
+                </div>
+                <div class="container">
+                    <div class="card">
+                        <table class="table table-hover shopping-cart-wrap">
+                            <thead class="text-muted bg-dark">
+                                <tr>
+                                    <th scope="col">Recipe</th>
+                                    <th scope="col" width="150">Portions</th>
+                                    <th scope="col" width="500" class="text-center">Price</th>
+                                    <th scope="col" width="400" class="text-center">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <figure class="media">
+                                            <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
+                                            <figcaption class="media-body">
+                                                <h6 class="title text-truncate">Product name goes here </h6>
+                                                <dl class="param param-inline small">
+                                                    <dt>Size: </dt>
+                                                    <dd>XXL</dd>
+                                                </dl>
+                                                <dl class="param param-inline small">
+                                                    <dt>Color: </dt>
+                                                    <dd>Orange color</dd>
+                                                </dl>
+                                            </figcaption>
+                                        </figure>
+                                    </td>
+                                    <td>
+                                        <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
+                                    </td>
+                                    <td>
+                                        <div class="price-wrap">
+                                            <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
+                                        </div> <!-- price-wrap .// -->
+                                    </td>
+                                    <td class="text-right">
+                                        <a href="" class="btn btn-success"> Details</a>
+                                        <a href="" class="btn btn-danger ml-2"> Remove ×</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <figure class="media">
+                                            <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
+                                            <figcaption class="media-body">
+                                                <h6 class="title text-truncate">Product name goes here </h6>
+                                                <dl class="param param-inline small">
+                                                    <dt>Size: </dt>
+                                                    <dd>XXL</dd>
+                                                </dl>
+                                                <dl class="param param-inline small">
+                                                    <dt>Color: </dt>
+                                                    <dd>Ingredients</dd>
+                                                </dl>
+                                            </figcaption>
+                                        </figure>
+                                    </td>
+                                    <td>
+                                        <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
+                                    </td>
+                                    <td>
+                                        <div class="price-wrap">
+                                            <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
+                                        </div> <!-- price-wrap .// -->
+                                    </td>
+                                    <td class="text-right">
+                                        <a href="" class="btn btn-success"> Details</a>
+                                        <a href="" class="btn btn-danger ml-2"> Remove ×</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <figure class="media">
+                                            <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
+                                            <figcaption class="media-body">
+                                                <h6 class="title text-truncate">Product name goes here </h6>
+                                                <dl class="param param-inline small">
+                                                    <dt>Size: </dt>
+                                                    <dd>XXL</dd>
+                                                </dl>
+                                                <dl class="param param-inline small">
+                                                    <dt>Color: </dt>
+                                                    <dd>Orange color</dd>
+                                                </dl>
+                                            </figcaption>
+                                        </figure>
+                                    </td>
+                                    <td>
+                                        <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
+                                    </td>
+                                    <td>
+                                        <div class="price-wrap">
+                                            <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
+                                        </div> <!-- price-wrap .// -->
+                                    </td>
+                                    <td class="text-right">
+                                        <a href="" class="btn btn-success"> Details</a>
+                                        <a href="" class="btn btn-danger ml-2"> Remove ×</a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td class="text-center">
+                                        <span ><i class="h3">Total:  </i>  <i class="h3" style="color:#ff0000">200.88</i> <i class="fa fa-euro fa-2x" style="color: #ff0000"></i></span>
+                                    </td>
+                                    <td class="text-right">
+                                        <a href="#" class="btn btn-primary w-100">Cashout</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div> <!-- card.// -->
 
-                <div class="preview-pic tab-content">
-                    <div class="tab-pane active" id="pic-1"><img src="http://img.haskovo.net/uploads/recipes/2015/04/02/13604.jpg" /></div>
                 </div>
             </div>
-            <div class="details col-md-6">
-                <h3 class="product-title">men's shoes fashion</h3>
-                <div class="rating">
-                    <div class="stars">
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star checked"></span>
-                        <span class="fa fa-star"></span>
-                        <span class="fa fa-star"></span>
-                    </div>
-                    <span class="review-no">41 reviews</span>
-                </div>
-                <p class="product-description">Suspendisse quos? Tempus cras iure temporibus? Eu laudantium cubilia sem sem! Repudiandae et! Massa senectus enim minim sociosqu delectus posuere.</p>
-                <h4 class="price">price: <span>$180</span></h4>
-                <p class="vote"><strong>91%</strong> of buyers enjoyed this product! <strong>(87 votes)</strong></p>
-                <div class="row mb-3">
-                    <div class="col-md-6">
-                        <ul class="list-group d-flex flex-row flex-wrap w-100">
-                            <li class="list-group-item active bg-success border border-success w-100">Required Ingredietes:</li>
-                            <li class="list-group-item w-50 d-flex justify-content-center">Beef</li>
-                            <li class="list-group-item w-50 d-flex justify-content-center">0.250 / kg</li>
-                            <li class="list-group-item w-50 d-flex justify-content-center">Carrots</li>
-                            <li class="list-group-item w-50 d-flex justify-content-center">2</li>
-                            <li class="list-group-item w-50 d-flex justify-content-center">Garlic</li>
-                            <li class="list-group-item w-50 d-flex justify-content-center">2</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="action d-flex justify-content-center">
-                            <a href="#" class="btn btn-danger btn-block mr-4">Buy <i class="fa fa-credit-card"></i></a>
-
-                        </div>
-
-                        <div class="action d-flex justify-content-center mt-2">
-                            <a href="#" class="btn btn-primary btn-block mr-4">Add to Cart <i class="fa fa-shopping-cart"></i></a>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="wrapper row">
-            <div class="preview col-md-6">
-                <div class="quote-box centered" style="width:95%">
-                    <div class="quote">
-                        <blockquote>
-                            "The secret of getting ahead is getting started. The secret of getting started is breaking your complex overwhelming tasks into small manageable tasks, and starting on the first one."eable tasks, and starting on the first one." on the first one."rst one."
-                        </blockquote>
-                    </div>
-                    <div class="name-quote">
-                        <span style="float:left">Created On: 19.19.19 22:20</span>
-                        <span >- Marko Markov</span>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 </div>
