--- a/Web/CookIt.Web/Views/Home/Index.cshtml
+++ b/Web/CookIt.Web/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 @model IPagedList<CookIt.Web.ViewModels.Recipe.RecipeIndexViewModel>
 @{
     this.ViewData["Title"] = "Home Page";
+    var url = this.Url.Action();
 }
 <div >
     <div class="row">
@@ -29,7 +30,7 @@
                             <div class="align-text-bottom">
                                 <div class="card-body">
                                     <a href="/Recipes/Details/@recipe.Id" class="btn btn-success">Details</a>
-                                    <a href="#" class="btn btn-primary ml-2">Add to Cart <i class="fa fa-cart-plus"></i></a>
+                                    <a href="/ShoppingCart/AddToCart/@recipe.Id" class="btn btn-primary ml-2">Add to Cart <i class="fa fa-cart-plus"></i></a>
                                 </div>
                             </div>
                         </div>
