--- a/Web/CookIt.Web/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <link href="~/css/site.css" rel="stylesheet" asp-append-version="true">
         <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
         <link href="~/css/responsive.css" rel="stylesheet" asp-append-version="true">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" >
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     </environment>
     <environment names="Staging,Production">
@@ -52,7 +52,7 @@
                                 <a href="#"><i class="fa fa-phone"></i> Call Us: <span>+359 987 654 321</span></a>
                                 <a href="#"><i class="fa fa-envelope"></i> Email: <span>CookIt@abv.bg</span></a>
                             </div>
-                            
+
                         </div>
                         <div class="row">
 
@@ -74,8 +74,19 @@
                         </ul>
                         <ul class="top_right d-flex justify-content-center">
                             <li class="user"><a href="/Identity/Account/Manage"><i class="icon-user icons"><i class="profileIcon">Profile</i></i></a></li>
-                            <li class="cart ml-4"><a href="#" amount="0"><i class="icon_cart_alt icons pr-1"></i></a></li>
+                            <vc:shopping-cart-icon></vc:shopping-cart-icon>
                         </ul>
+                        @if (this.TempData["CartItemAdded"] != null)
+                        {
+                            <ul class="mt-3">
+                                <li>
+                                    <span class="alert alert-success alert-dismissible" style="width:25%">
+                                        Recipe Added.
+                                        <a href="#" class="fa fa-close" data-dismiss="alert" aria-label="Close"></a>
+                                    </span>
+                                </li>
+                            </ul>
+                        }
                     </div>
                 </div>
             </div>
