Implemented functionality for Orders.

--- a/Web/CookIt.Web/Views/Recipes/Details.cshtml
+++ b/Web/CookIt.Web/Views/Recipes/Details.cshtml
@@ -72,7 +72,7 @@
                                             </blockquote>
                                         </div>
                                         <div class="name-quote">
-                                            <span style="float:left">Created On: @review.CreatedOn</span>
+                                            <span style="float:left">Posted On: @review.CreatedOn</span>
                                             <span>- @review.Author</span>
                                         </div>
                                     </div>
