--- a/Web/CookIt.Web/Views/ShoppingCart/Index.cshtml
+++ b/Web/CookIt.Web/Views/ShoppingCart/Index.cshtml
@@ -62,7 +62,7 @@
                                                 <span><i class="h3">Total:  </i>  <i class="h3" style="color:#ff0000">@Model.Sum(x => x.Price).ToString("F2")</i> <i class="fa fa-euro fa-2x" style="color: #ff0000"></i></span>
                                             </td>
                                             <td class="text-right">
-                                                <a href="#" class="btn btn-primary w-100">Cashout</a>
+                                                <a href="/Orders/Checkout" class="btn btn-primary w-100">Checkout</a>
                                             </td>
                                         </tr>
                                     </tbody>
