--- a/Web/CookIt.Web/Views/Home/Privacy.cshtml
+++ b/Web/CookIt.Web/Views/Home/Privacy.cshtml
@@ -6,131 +6,70 @@
 <p>Use this page to detail your site's privacy policy.</p>
 
 <div class="card" style="background: #eee">
-    <div class="container-fliud">
-        <div class="wrapper row">
-            <div class="preview col-md-12 mb-3">
-                <div class="h3 mt-3 centered">
-                    Your Shopping cart
-                </div>
-                <div class="container">
-                    <div class="card">
-                        <table class="table table-hover shopping-cart-wrap">
-                            <thead class="text-muted bg-dark">
-                                <tr>
-                                    <th scope="col">Recipe</th>
-                                    <th scope="col" width="150">Portions</th>
-                                    <th scope="col" width="500" class="text-center">Price</th>
-                                    <th scope="col" width="400" class="text-center">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <figure class="media">
-                                            <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
-                                            <figcaption class="media-body">
-                                                <h6 class="title text-truncate">Product name goes here </h6>
-                                                <dl class="param param-inline small">
-                                                    <dt>Size: </dt>
-                                                    <dd>XXL</dd>
-                                                </dl>
-                                                <dl class="param param-inline small">
-                                                    <dt>Color: </dt>
-                                                    <dd>Orange color</dd>
-                                                </dl>
-                                            </figcaption>
-                                        </figure>
-                                    </td>
-                                    <td>
-                                        <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
-                                    </td>
-                                    <td>
-                                        <div class="price-wrap">
-                                            <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
-                                        </div> <!-- price-wrap .// -->
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="" class="btn btn-success"> Details</a>
-                                        <a href="" class="btn btn-danger ml-2"> Remove ×</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <figure class="media">
-                                            <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
-                                            <figcaption class="media-body">
-                                                <h6 class="title text-truncate">Product name goes here </h6>
-                                                <dl class="param param-inline small">
-                                                    <dt>Size: </dt>
-                                                    <dd>XXL</dd>
-                                                </dl>
-                                                <dl class="param param-inline small">
-                                                    <dt>Color: </dt>
-                                                    <dd>Ingredients</dd>
-                                                </dl>
-                                            </figcaption>
-                                        </figure>
-                                    </td>
-                                    <td>
-                                        <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
-                                    </td>
-                                    <td>
-                                        <div class="price-wrap">
-                                            <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
-                                        </div> <!-- price-wrap .// -->
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="" class="btn btn-success"> Details</a>
-                                        <a href="" class="btn btn-danger ml-2"> Remove ×</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <figure class="media">
-                                            <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
-                                            <figcaption class="media-body">
-                                                <h6 class="title text-truncate">Product name goes here </h6>
-                                                <dl class="param param-inline small">
-                                                    <dt>Size: </dt>
-                                                    <dd>XXL</dd>
-                                                </dl>
-                                                <dl class="param param-inline small">
-                                                    <dt>Color: </dt>
-                                                    <dd>Orange color</dd>
-                                                </dl>
-                                            </figcaption>
-                                        </figure>
-                                    </td>
-                                    <td>
-                                        <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
-                                    </td>
-                                    <td>
-                                        <div class="price-wrap">
-                                            <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
-                                        </div> <!-- price-wrap .// -->
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="" class="btn btn-success"> Details</a>
-                                        <a href="" class="btn btn-danger ml-2"> Remove ×</a>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td class="text-center">
-                                        <span ><i class="h3">Total:  </i>  <i class="h3" style="color:#ff0000">200.88</i> <i class="fa fa-euro fa-2x" style="color: #ff0000"></i></span>
-                                    </td>
-                                    <td class="text-right">
-                                        <a href="#" class="btn btn-primary w-100">Cashout</a>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div> <!-- card.// -->
+    <div class="row">
+        <div class="col-md-6 centered">
+            <h3 class="mt-3 text-center">
+                Billing Details
+            </h3>
+        </div>
+        <div class="col-md-6">
+        <div class="container-fliud">
+            <div class="wrapper row">
+                <div class="preview col-md-12 mb-3">
+                   
+                    <div class="container mt-3">
+                        <div class="card">
+                            <table class="table table-hover shopping-cart-wrap">
+                                <thead class="text-muted bg-dark">
+                                    <tr>
+                                        <th scope="col" width="150">Recipe</th>
+                                        <th scope="col" width="40">Portions</th>
+                                        <th scope="col" width="250" class="text-center">Price</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <figure class="media">
+                                                <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
+                                                <figcaption class="media-body">
+                                                    <h6 class="title text-truncate">Product name goes here </h6>
+                                                    <dl class="param param-inline small">
+                                                        <dt>Size: </dt>
+                                                        <dd>XXL</dd>
+                                                    </dl>
+                                                    <dl class="param param-inline small">
+                                                        <dt>Color: </dt>
+                                                        <dd>Orange color</dd>
+                                                    </dl>
+                                                </figcaption>
+                                            </figure>
+                                        </td>
+                                        <td>
+                                            <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
+                                        </td>
+                                        <td>
+                                            <div class="price-wrap">
+                                                <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
+                                            </div> <!-- price-wrap .// -->
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td></td>
+                                        <td class="text-center">
+                                            <span><i class="h3">Total:  </i>  <i class="h3" style="color:#ff0000">200.88</i> <i class="fa fa-euro fa-2x" style="color: #ff0000"></i></span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div> <!-- card.// -->
 
+                    </div>
                 </div>
+
             </div>
-            
+            </div>
         </div>
     </div>
 </div>
