Added the administration functionality for Orders and Details for Orders.

--- a/Web/CookIt.Web/Areas/Administration/Views/Recipes/AllRecipes.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Recipes/AllRecipes.cshtml
@@ -33,7 +33,7 @@ else
                         <th scope="auto">Portions</th>
                         <th scope="auto">Description</th>
                         <th scope="auto">Picture</th>
-                        <th scope="auto"></th>
+                        <th scope="auto" class="text-center">Action</th>
                     </tr>
                 </thead>
                 <tbody>
