--- a/Web/CookIt.Web/Areas/Administration/Views/Shared/_Layout.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Shared/_Layout.cshtml
@@ -26,17 +26,13 @@
                 <ul class="submenu">
                     <li><a id="link-a" href="/Administration/Recipes/AllRecipes">All Recipes</a></li>
                     <li><a id="link-a" href="/Administration/Recipes/CreateRecipe">Create Recipe</a></li>
-                    <li><a href="#">Medios de escritorio</a></li>
-                    <li><a href="#">Otros dispositivos</a></li>
                 </ul>
             </li>
             <li>
-                <div class="link"><i class="fa fa-shopping-cart"></i>Posicionamiento web<i class="fa fa-chevron-down"></i></div>
+                <div class="link"><i class="fa fa-shopping-cart"></i>Orders<i class="fa fa-chevron-down"></i></div>
                 <ul class="submenu">
-                    <li><a href="#">Google</a></li>
-                    <li><a href="#">Bing</a></li>
-                    <li><a href="#">Yahoo</a></li>
-                    <li><a href="#">Otros buscadores</a></li>
+                    <li><a href="/Administration/Orders/AllOrders">All Orders</a></li>
+                    <li><a href="/Administration/Orders/Pending">Pending Orders</a></li>
                 </ul>
             </li>
         </ul>
