--- a/Web/CookIt.Web/Views/ShoppingCart/Index.cshtml
+++ b/Web/CookIt.Web/Views/ShoppingCart/Index.cshtml
@@ -50,7 +50,7 @@
                                                     </div> <!-- price-wrap .// -->
                                                 </td>
                                                 <td class="text-right">
-                                                    <a href="/Details/@cartItem.Id" class="btn btn-success"> Details</a>
+                                                    <a href="/Recipes/Details/@cartItem.Id" class="btn btn-success"> Details</a>
                                                     <a href="/ShoppingCart/RemoveFromCart/@cartItem.Id" class="btn btn-danger ml-2"> Remove ×</a>
                                                 </td>
                                             </tr>
