Minor fixes,Added My Orders page and functionality.

--- a/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Addresses.cshtml
+++ b/Web/CookIt.Web/Areas/Identity/Pages/Account/Manage/Addresses.cshtml
@@ -22,8 +22,8 @@
     {
         <div class="col-md-12 pt-2">
             <div class="table-responsive">
-                <table class="table table-bordered border-info">
-                    <thead class="border-danger">
+                <table class="table table-bordered border-info table-hover">
+                    <thead class="thead-dark">
                         <tr>
                             <th scope="auto">#</th>
                             <th scope="auto">Address</th>
