--- a/Web/CookIt.Web/Areas/Administration/Views/Orders/Pending.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Orders/Pending.cshtml
@@ -43,7 +43,7 @@ else
                                 <form method="post">
                                     <div class="row mr-1 d-flex justify-content-center">
                                         <a asp-controller="Orders" asp-action="Details" asp-route-id="@Model[i].Id" class="col-md-3 btn btn-primary fa ml-1">Details<i class="fa fa-info-circle ml-1"></i></a>
-                                        <a asp-controller="Orders" asp-action="Confirm" asp-route-id="@Model[i].Id" class="col-md-3 btn btn-success fa ml-1">Confirm <i class="fa fa-check"></i></a>
+                                        <button type="submit" class="col-md-3 btn btn-success fa ml-1" asp-controller="Orders" asp-action="Confirm" asp-route-id="@Model[i].Id">Confirm <i class="fa fa-check"></i></button>
                                         <button type="submit" class="col-md-3 btn btn-danger fa ml-1 text-center" asp-controller="Orders" asp-action="Cancel" asp-route-id="@Model[i].Id">Cancel<i class="fa fa-close ml-1"></i></button>
                                     </div>
                                 </form>
