--- a/Web/CookIt.Web/Views/Home/Index.cshtml
+++ b/Web/CookIt.Web/Views/Home/Index.cshtml
@@ -29,8 +29,12 @@
                             </ul>
                             <div class="align-text-bottom">
                                 <div class="card-body">
-                                    <a href="/Recipes/Details/@recipe.Id" class="btn btn-success">Details</a>
-                                    <a href="/ShoppingCart/AddToCart/@recipe.Id" class="btn btn-primary ml-2">Add to Cart <i class="fa fa-cart-plus"></i></a>
+                                    <div class="row justify-content-center">
+                                        <a href="/Recipes/Details/@recipe.Id" class="btn btn-success">Details</a>
+                                        <form method="post" asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@recipe.Id">
+                                            <button type="submit" class="btn btn-primary ml-2">Add to Cart <i class="fa fa-cart-plus"></i></button>
+                                        </form>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -63,7 +67,7 @@
         </div>
         <div class="col-3">
             <div class="d-flex centered">
-                <div class="card col" style="width: 18rem;">
+                <div class="card col-md-12" style="width: 18rem;">
                     <img class="card-img-top" src="https://res.cloudinary.com/cookitproject/image/upload/v1564184360/recipe_images/rf6vvmebi0ngsdllv1xr.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
