--- a/Web/CookIt.Web/Views/Home/Privacy.cshtml
+++ b/Web/CookIt.Web/Views/Home/Privacy.cshtml
@@ -4,72 +4,64 @@
 <h1>@this.ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
-
 <div class="card" style="background: #eee">
-    <div class="row">
-        <div class="col-md-6 centered">
-            <h3 class="mt-3 text-center">
-                Billing Details
-            </h3>
-        </div>
-        <div class="col-md-6">
-        <div class="container-fliud">
-            <div class="wrapper row">
-                <div class="preview col-md-12 mb-3">
-                   
-                    <div class="container mt-3">
-                        <div class="card">
-                            <table class="table table-hover shopping-cart-wrap">
-                                <thead class="text-muted bg-dark">
-                                    <tr>
-                                        <th scope="col" width="150">Recipe</th>
-                                        <th scope="col" width="40">Portions</th>
-                                        <th scope="col" width="250" class="text-center">Price</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <figure class="media">
-                                                <div class="img-wrap"><img src="https://res.cloudinary.com/cookitproject/image/upload/v1564362094/recipe_images/h4swqtdrg0tplkneri1g.jpg" class="img-thumbnail img-sm"></div>
-                                                <figcaption class="media-body">
-                                                    <h6 class="title text-truncate">Product name goes here </h6>
-                                                    <dl class="param param-inline small">
-                                                        <dt>Size: </dt>
-                                                        <dd>XXL</dd>
-                                                    </dl>
-                                                    <dl class="param param-inline small">
-                                                        <dt>Color: </dt>
-                                                        <dd>Orange color</dd>
-                                                    </dl>
-                                                </figcaption>
-                                            </figure>
-                                        </td>
-                                        <td>
-                                            <span class="text-success pl-4"> <i class="h5">2</i> <i class="fa fa-users"></i></span>
-                                        </td>
-                                        <td>
-                                            <div class="price-wrap">
-                                                <var class="price text-center">39.99<i class="fa fa-euro fa-1x"></i></var>
-                                            </div> <!-- price-wrap .// -->
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td class="text-center">
-                                            <span><i class="h3">Total:  </i>  <i class="h3" style="color:#ff0000">200.88</i> <i class="fa fa-euro fa-2x" style="color: #ff0000"></i></span>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div> <!-- card.// -->
-
+    <div class="m-3">
+        <h3 class="text-center"> My Active Orders </h3>
+        @*@if (!Model.Any())
+            {
+                <div class="col-md-12 pt-2">
+                    <div class="alert alert-dark" role="alert">
+                        There are no active orders.
                     </div>
                 </div>
+            }
+            else
+            {*@
+        @*<div>
+                <partial name="_StatusMessage" for="@this.TempData["StatusMessage"]" />
+            </div>*@
+        <div class="d-flex justify-content-center mt-3">
+            <div class="table-responsive">
+                <table class="table table-bordered border-info table-hover">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="auto">#</th>
+                            <th scope="auto">Delivery Address</th>
+                            <th scope="auto">Delivery Date</th>
+                            <th scope="auto">Courier</th>
+                            <th scope="auto">Price</th>
+                            <th scope="auto">Status</th>
+                            <th scope="auto" class="text-center">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody style="background:white">
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Sofia sofia sofia sofia</td>
+                            <td>08.08.08.08.08</td>
+                            <td>Peter Petrov</td>
+                            <td>39.99</td>
+                            <td>Pending</td>
+                            <td>Button</td>
 
-            </div>
+                        </tr>
+                        @*@for (int i = 0; i < Model.Count; i++)
+                            {
+                                <tr>
+                                    <th scope="row">@((i + 1) + ((Model.PageNumber - 1) * Model.PageSize))</th>
+                                    <td>@Model[i].IssuedOn.ToString("D")</td>
+                                    <td>@Model[i].OrderStatusName</td>
+                                    <td>@Model[i].FullNameIssuer</td>
+                                    <td>@Model[i].DeliveryDate.ToString("D")</td>
+                                    <td class="text-center">
+                                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@Model[i].Id" class="btn btn-primary fa ml-1">Details<i class="fa fa-info-circle ml-1"></i></a>
+                                    </td>
+                                </tr>
+                            }*@
+                    </tbody>
+                </table>
             </div>
         </div>
+        @*}*@
     </div>
-</div>
+    </div>
