--- a/Web/CookIt.Web/Views/Recipes/Details.cshtml
+++ b/Web/CookIt.Web/Views/Recipes/Details.cshtml
@@ -126,19 +126,21 @@
                     </div>
                     <div class="col-md-6">
                         <div class="action d-flex justify-content-center">
-                            <a href="#" class="btn btn-danger btn-block mr-4">Buy <i class="fa fa-credit-card"></i></a>
-
+                            <form method="post" asp-action="Buy" asp-controller="ShoppingCart" asp-route-id="@Model.Id" class="btn-block mr-4">
+                                <button type="submit" class="btn btn-danger btn-block mr-4">Buy <i class="fa fa-credit-card"></i></button>
+                            </form>
                         </div>
 
                         <div class="action d-flex justify-content-center mt-2">
-                            <a href="/ShoppingCart/AddToCart/@Model.Id?returnUrl=@this.Url.Action()" class="btn btn-primary btn-block mr-4">Add to Cart <i class="fa fa-shopping-cart"></i></a>
+                            <form method="post" asp-action="AddToCart" asp-controller="ShoppingCart" asp-route-id="@Model.Id" asp-route-return-url="@this.Url.Action()" class="btn-block mr-4">
+                                <button type="submit" class="btn btn-primary btn-block mr-4">Add to Cart <i class="fa fa-shopping-cart"></i></button>
+                            </form>
                         </div>
-
                     </div>
                 </div>
             </div>
         </div>
-       
+
     </div>
 </div>
 
