--- a/Web/CookIt.Web/Views/Orders/MyOrders.cshtml
+++ b/Web/CookIt.Web/Views/Orders/MyOrders.cshtml
@@ -13,7 +13,7 @@
         {
             <div class="col-md-12 pt-2">
                 <div class="alert alert-dark" role="alert">
-                    There are no active orders.
+                    You have no active orders.
                 </div>
             </div>
         }
