--- a/Web/CookIt.Web/Areas/Administration/Views/Orders/Pending.cshtml
+++ b/Web/CookIt.Web/Areas/Administration/Views/Orders/Pending.cshtml
@@ -4,6 +4,10 @@
 
 @model IPagedList<CookIt.Web.ViewModels.Order.OrderAllViewModel>
 
+@{
+    ViewData["Title"] = "Pending Orders";
+}
+
 @if (Model.Count == 0)
 {
     <div class="col-md-12 pt-2">
@@ -36,7 +40,7 @@ else
                         <tr>
                             <th scope="row">@((i + 1) + ((Model.PageNumber - 1) * Model.PageSize))</th>
                             <td>@Model[i].IssuedOn.ToString("D")</td>
-                            <td>@Model[i].OrderStatusName</td>
+                            <td class="text-success"><b>@Model[i].OrderStatusName</b></td>
                             <td>@Model[i].FullNameIssuer</td>
                             <td>@Model[i].DeliveryDate.ToString("D")</td>
                             <td>
