--- a/Web/CookIt.Web/Areas/Courier/Views/Orders/Delivered.cshtml
+++ b/Web/CookIt.Web/Areas/Courier/Views/Orders/Delivered.cshtml
@@ -4,33 +4,37 @@
 
 @model IPagedList<CookIt.Web.ViewModels.Order.OrderAllViewModel>
 
-@{ 
-    ViewData["Title"] = "All Orders";
+@{
+    ViewData["Title"] = "Delivered";
 }
 
+<div class="m-3">
+    <partial name="_StatusMessage" for="@this.TempData["StatusMessage"]" />
+</div>
+
+<h3 class="d-flex justify-content-center m-3">
+    Delivering Orders
+</h3>
 @if (Model.Count == 0)
 {
     <div class="col-md-12 pt-2">
         <div class="alert alert-dark" role="alert">
-            There are no orders.
+            There are no orders to deliver.
         </div>
     </div>
 }
 else
 {
-    <div>
-        <partial name="_StatusMessage" for="@this.TempData["StatusMessage"]" />
-    </div>
     <div class="d-flex justify-content-center">
         <div class="table-responsive">
             <table class="table table-bordered border-info table-hover">
                 <thead class="thead-dark">
                     <tr>
                         <th scope="auto">#</th>
-                        <th scope="auto">Issued On</th>
-                        <th scope="auto">Status</th>
                         <th scope="auto">Issuer</th>
                         <th scope="auto">Delivery Date</th>
+                        <th scope="auto">Address</th>
+                        <th scope="auto">Status</th>
                         <th scope="auto" class="text-center">Action</th>
                     </tr>
                 </thead>
@@ -39,12 +43,17 @@ else
                     {
                         <tr>
                             <th scope="row">@((i + 1) + ((Model.PageNumber - 1) * Model.PageSize))</th>
-                            <td>@Model[i].IssuedOn.ToString("D")</td>
-                            <td>@Model[i].OrderStatusName</td>
                             <td>@Model[i].FullNameIssuer</td>
                             <td>@Model[i].DeliveryDate.ToString("D")</td>
+                            <td>@Model[i].Address</td>
+                            <td class="text-success"><b>@Model[i].OrderStatusName</b></td>
                             <td class="text-center">
-                                <a asp-controller="Orders" asp-action="Details" asp-route-id="@Model[i].Id" class="btn btn-primary fa ml-1">Details<i class="fa fa-info-circle ml-1"></i></a>
+                                <form method="post">
+                                    <div class="row mr-1 d-flex justify-content-center">
+                                        <a asp-controller="Orders" asp-action="Details" asp-route-id="@Model[i].Id" class="btn btn-primary col-md-5 fa ml-1">Details<i class="fa fa-info-circle ml-1"></i></a>
+                                        <button type="submit" class="col-md-5 btn btn-success fa ml-1" asp-controller="Orders" asp-action="Delivered" asp-route-id="@Model[i].Id">Delivered <i class="fa fa-check"></i></button>
+                                    </div>
+                                </form>
                             </td>
                         </tr>
                     }
@@ -53,7 +62,7 @@ else
         </div>
     </div>
     <div class="d-flex justify-content-center mt-4">
-        @Html.PagedListPager((IPagedList)Model, page => Url.Action("Pending",
+        @Html.PagedListPager((IPagedList)Model, page => Url.Action("Delivered",
                                                                         new
                                                                         {
                                                                             p = page
