--- a/Web/CookIt.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/CookIt.Web/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,12 @@
         <li class="nav-item">
             <a class="nav-link" asp-area="Administration" asp-controller="Dashboard" asp-action="Index" title="Admin">Admin</a>
         </li>
-        
+    }
+    if (this.User.IsInRole(GlobalConstants.CourierRoleName))
+    {
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Courier" asp-controller="Orders" asp-action="Index" title="Courier">Courier</a>
+        </li>
     }
     <li class="nav-item">
         <form class="form-inline" id="logoutForm" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@(this.Url.Action("Index", "Home", new { area = string.Empty }))">
